<resources>
    <string name="app_name">IELTS Preparation &amp; Tips</string>
    <string name="IeltsVocabularyText">IELTS Vocabulary</string>
    <string name="GrammarForIeltsText">Grammar For IELTS</string>
    <string name="IeltsTipsText">IELTS Tips</string>
    <string name="readingText">Reading</string>
    <string name="writingText">Writing</string>
    <string name="speakingText">Speaking</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="part_of_speech">Part of Speech</string>
    <string name="word_name">Word Name</string>
    <string name="partOfSpeechText">Types of words</string>
    <string name="tenses">Types of Tenses</string>
    <string name="adjectives">Adjectives</string>
    <string name="adverb">Adverb</string>
    <string name="conjunction">Conjunction</string>
    <string name="interjections">Interjections</string>
    <string name="noun">Noun</string>
    <string name="prepositions">Prepositions</string>
    <string name="pronoun">Pronoun</string>
    <string name="verb">Verb</string>
    <string name="presentTense">Present Tense</string>
    <string name="pastTense">Past Tense</string>
    <string name="futureTense">Future Tense</string>
    <string name="simple">Simple</string>
    <string name="continuous">Continuous Tense</string>
    <string name="perfect_tense">Perfect Tense</string>
    <string name="perfect_continuous_tense">Perfect Continuous Tense</string>
    <string name="ielts_tip_text">IELTS Tip</string>
    <string name="reading_test">Reading Test</string>
    <string name="lesson_group_1">Lesson Group 1</string>
    <string name="question_types">Question Types</string>
    <string name="reading">Reading</string>
    <string name="lesson_group_2">Lesson Group 2</string>
    <string name="Reading_Skills">Reading Skills</string>
    <string name="numbering">1</string>
    <string name="title">Title</string>
    <string name="topic">Topic</string>
    <string name="writing_lesson">Writing Lesson</string>
    <string name="writing_task_1">Task 1</string>
    <string name="writing_task_2">Task 2</string>
    <string name="writing">Writing</string>
    <string name="common">Common</string>
    <string name="lesson_group_3">Lesson Group 3</string>
    <string name="questionHeading">Question</string>
    <string name="question_details">Question Details</string>
    <string name="image_related_to_question">Image related to Question</string>
    <string name="answer">Sample Answer</string>
    <string name="answer_details">Answer Details</string>
    <string name="speaking_lesson">SPEAKING LESSON</string>
    <string name="speaking_test">SPEAKING TEST</string>
    <string name="listeningText">Listening</string>
    <string name="speaking">Speaking</string>
    <string name="speaking_part_1">Part 1</string>
    <string name="speaking_part_2">Part 2</string>
    <string name="speaking_part_3">Part 3</string>
    <string name="lesson_group_4">Lesson Group 4</string>
    <string name="topic_name">Topic Name</string>
    <string name="textview">TextView</string>
    <string name="source_name">Source Name</string>
    <string name="explanation">Explanation</string>
    <string name="speaking_text">Speaking</string>
    <string name="vocabularies">Vocabularies</string>
    <string name="check_sample_answer">Check Sample Answer</string>
    <string name="listening_tests">Listening Tests</string>
    <string name="listening_lessons">Listening Lessons</string>
    <string name="listening">Listening</string>
    <string name="listening_practice_lessons">Listening Practice Lessons</string>
    <string name="ielts_listening_tips">IELTS Listening Tips</string>
    <string name="check_answers">Check Answers</string>
    <string name="answers_button_description">Button to display answer</string>
    <string name="play_audio">Play Audio</string>
    <string name="pause_Audio">Pause Audio</string>
    <string name="ielts_preparation">IELTS PREPARATION</string>
    <string name="ielts_preparation_actionbar">IELTS PREPARATION</string>
    <string name="ielts_preparation_dashboard_text">IELTS \nPREPARATION</string>
    <string name="splash_screen_main_image">splash screen main image</string>
    <string name="complete_vocabulary_learning_and_practice_app">App for Learning and Practicing Vocabulary</string>
    <string name="continue_splash">Proceed</string>
    <string name="dashboard_main_card_image">dashboard main card image</string>
    <string name="practice_your_learning_skills_in_an_exciting_way">Exciting ways to practise your learning skills</string>
    <string name="category">Category</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="tips">Ielts Tips</string>
    <string name="grammar">Ielts Grammar</string>
    <string name="reading_lesson">Reading Lesson</string>
    <string name="image_on_card">imageOnCard</string>
    <string name="lesson">Lesson</string>
    <string name="test">Test</string>
    <string name="ielts_preparation_text">IELTS Preparation</string>
    <string name="item_icon">Item Icon</string>
    <string name="how_to">How to:</string>
    <string name="button_to_speak_text">Button to Speak Text</string>
    <string name="tip_content">Tip Content:</string>
    <string name="image_button_arrow_down">image button arrow down</string>
    <string name="source">Source:</string>
    <string name="ielts_vocabulary_actionBar_text">VOCABULARY</string>
    <string name="words">Words</string>
    <string name="button_to_display_previous_word">Button to display previous Word</string>
    <string name="button_to_display_next_word">Button to display next word</string>
    <string name="meaning">Meaning</string>
    <string name="translate">Translate</string>
    <string name="web_search">Web Search</string>
    <string name="topic_title">Topic Title</string>
    <string name="currentPosition_totalWords">currentPosition / totalWords</string>
    <string name="uk">UK...........</string>
    <string name="us">US...........</string>
    <string name="icon_button_in_action_bar">Icon Button in action bar</string>
    <string name="tips_actionBar">Tips</string>
    <string name="grammar_actionbar">English Grammar</string>
    <string name="readingLesson_actionBar">READING LESSON</string>
    <string name="readingTest_actionBar">READING TEST</string>
    <string name="writingLesson_actionBar">WRITING LESSON</string>
    <string name="writing_task_one_actionBar">WRITING TASK 1</string>
    <string name="writing_task_two_actionBar">WRITING TASK 2</string>
    <string name="lesson_type">Lesson Type</string>
    <string name="lesson_content">Lesson Content</string>
    <string name="reading_actionBar">READING</string>
    <string name="writing_actionBar">WRITING</string>
    <string name="speaking_actionBar">SPEAKING</string>
    <string name="answerOnly">Answer</string>
    <string name="answerReadingExplanation">Answer:</string>
    <string name="reading_lesson_home_actionbar">Reading</string>
    <string name="reading_question_types_actionbar">Question Types</string>
    <string name="reading_skills_actionbar">Reading Skills</string>
    <string name="reading_test_actionbar">Reading Test</string>
    <string name="listening_actionbar">Listening</string>
    <string name="listening_types_actionbar">Listening Types</string>
    <string name="listening_test_actionbar">Listening Test</string>
    <string name="speaking_actionbar">Speaking</string>
    <string name="speaking_test_actionbar">Speaking Test</string>
    <string name="writing_actionbar">Writing</string>
    <string name="writing_test_actionbar">Writing Test</string>
    <string name="present">Present</string>
    <string name="past">Past</string>
    <string name="future">Future</string>
    <string name="parts_of_speech">Parts of Speech</string>
    <string name="tense">Tenses</string>
    <string name="simpletense">Simple Tense</string>
    <string name="alert_dialog_title">Alert</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="splash_background_image">splash background image</string>
    <string name="tense_name">Tense Name</string>
    <string name="lang_not_supported">The Language specified is not supported!</string>
    <string name="failed_initialization">Initialization Failed!</string>
    <string name="textNotFoundToast">No text found to speak</string>
    <string name="play_pause_button">play pause button</string>
    <string name="translate_button">translate button</string>
    <string name="button_rewind_audio_by_ten_seconds">button rewind audio by ten seconds</string>
    <string name="button_to_show_answers">button to show answers</string>
    <string name="button_to_forward_audio_by_ten_seconds">button to forward audio by ten seconds</string>
    <string name="dialog_meaning">Meaning: </string>
    <string name="dialog_example">Example: </string>
    <string name="dialog_gotItButton">Got It</string>
    <string name="button_to_dismiss_bottom_sheet_fragment">button to dismiss bottom sheet fragment</string>
    <string name="enter_a_word_and_select_a_language_to_translate_it_into">Enter words and select a language to translate it into.</string>
    <string name="translate_dialog_open_toast">Select language to translate it into.</string>
    <string name="allow_internet_permission">Allow Internet Permission</string>
    <string name="bottom_sheet_heading_vocabulary_word">Set language you want to translate it into.</string>
    <string name="no_internet">No Internet</string>
    <string name="settings">Setting</string>
    <string name="enable_wifi">Enable Wifi and Try Again!</string>
    <string name="please_wait">Please Wait</string>
</resources>