<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginBottom="15dp"
    app:cardCornerRadius="16dp"
    app:strokeColor="@color/blue_500"
    app:strokeWidth="@dimen/cardview_compat_inset_shadow">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="22dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/tv_itemNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/numbering"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_titleTest"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="start"
            android:maxLines="2"
            android:text="@string/title"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_itemNo"
            app:layout_constraintTop_toTopOf="@+id/tv_itemNo" />

        <TextView
            android:id="@+id/tv_testType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rect_corners"
            android:backgroundTint="@color/orange_800"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:paddingStart="10dp"
            android:paddingTop="4dp"
            android:paddingEnd="10dp"
            android:paddingBottom="4dp"
            android:text="@string/reading"
            android:textColor="@color/white"
            android:textSize="12sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_testCategory"
            app:layout_constraintHorizontal_bias="0.993"
            app:layout_constraintTop_toBottomOf="@+id/tv_titleTest"
            app:layout_constraintVertical_bias="0.533" />

        <TextView
            android:id="@+id/tv_testCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_corners"
            android:backgroundTint="@color/blue_500"
            android:ellipsize="marquee"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:maxLength="20"
            android:paddingStart="10dp"
            android:paddingTop="4dp"
            android:paddingEnd="10dp"
            android:paddingBottom="4dp"
            android:text="@string/question_types"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_testType"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_testType" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>