<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dashboardScrollview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow_50"
    android:descendantFocusability="afterDescendants"
    android:scrollbars="none">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow_50"
        tools:context=".ui.vocabulary.fragments.VocabularyTopicsFragment">

        <Button
            android:id="@+id/btn_requestPermission"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            app:backgroundTint="@color/blue_500"
            android:fontFamily="@font/montserrat_medium"
            android:textColor="@color/white"
            android:visibility="invisible"
            android:text="@string/allow_internet_permission"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_vocabularyTopics"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_topicNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/topic"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_vocabularyTopics" />

        <TextView
            android:id="@+id/tv_totalWords"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/words"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_topicNumber"
            app:layout_constraintStart_toStartOf="@+id/tv_topicNumber"
            app:layout_constraintTop_toBottomOf="@+id/tv_topicNumber" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_wordsCards"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:isScrollContainer="false"
            android:nestedScrollingEnabled="false"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:scrollbars="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_totalWords" />

        <ImageButton
            android:id="@+id/btn_previousWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/button_to_display_previous_word"
            android:src="@drawable/ic_arrow_previous_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_nextWord"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_wordsCards" />

        <ImageButton
            android:id="@+id/btn_nextWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/button_to_display_next_word"
            android:src="@drawable/ic_arrow_next_orange"
            app:layout_constraintBottom_toBottomOf="@+id/btn_previousWord"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_previousWord"
            app:layout_constraintTop_toTopOf="@+id/btn_previousWord" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>