<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_itemsMainBackground"
    android:layout_width="match_parent"
    android:layout_height="206dp"
    android:layout_margin="10dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="5dp"
    app:strokeColor="@color/yellow_50"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView_itemImage"
            android:layout_width="0dp"
            android:layout_height="90dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/image_on_card"
            android:scaleType="centerInside"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_reading_lesson_card" />

        <TextView
            android:id="@+id/tv_itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/montserrat_semi_bold"
            android:gravity="center"
            android:text="@string/reading"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@+id/imageView_itemImage"
            app:layout_constraintStart_toStartOf="@+id/imageView_itemImage"
            app:layout_constraintTop_toBottomOf="@+id/imageView_itemImage" />

        <TextView
            android:id="@+id/tv_lessonOrTest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/lesson"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/imageView_itemImage"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="@+id/imageView_itemImage"
            app:layout_constraintTop_toBottomOf="@+id/tv_itemName"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>